--- a/package.json
+++ b/package.json
@@ -6,13 +6,10 @@
   "scripts": {
     "start": "node index.js"
   },
-  "engines": {
-    "node": ">=18"
-  },
   "dependencies": {
+    "axios": "^1.3.3",
     "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "openai": "^4.0.0"
+    "dotenv": "^10.0.0"
   }
 }
