--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "ai-inbox-assistant",
   "version": "1.0.0",
-  "description": "AI Inbox Backend",
+  "description": "AI Inbox Assistant Backend",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.3.3",
+    "axios": "^1.6.8",
     "body-parser": "^1.20.2",
-    "express": "^4.18.2",
-    "dotenv": "^10.0.0"
+    "express": "^4.18.2"
   }
 }
